; ModuleID = '/home/carl/AnghaBench/reactos/dll/shellext/deskadp/extr_shxiface.c_IDeskDisplayAdapter_InitIface.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/shellext/deskadp/extr_shxiface.c_IDeskDisplayAdapter_InitIface.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32*, i32*, i32* }

@efvtIShellPropSheetExt = common dso_local global i32 0, align 4
@efvtIShellExtInit = common dso_local global i32 0, align 4
@efvtIClassFactory = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IDeskDisplayAdapter_InitIface(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 2
  store i32* @efvtIShellPropSheetExt, i32** %5, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 1
  store i32* @efvtIShellExtInit, i32** %7, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  store i32* @efvtIClassFactory, i32** %9, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = call i32 @IDeskDisplayAdapter_AddRef(%struct.TYPE_4__* %10)
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i32 @IDeskDisplayAdapter_AddRef(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
